--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jquery": "^3.5.27",
     "escape-html": "^1.0.3",
+    "isotope-layout": "^3.0.6",
     "preact": "^10.13.1",
     "slate": "^0.100.0"
   },
