--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jquery": "^3.5.27",
     "escape-html": "^1.0.3",
     "preact": "^10.13.1",
+    "preact-router": "^4.1.2",
     "react-masonry-component": "^6.3.0",
     "slate": "^0.100.0"
   },
