--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
     "@preact/preset-vite": "^2.5.0",
     "vite": "^4.3.2"
   },
-  "proxy": "https://de-grafische-studio.vercel.app/"
+  "proxy": "https://de-grafische-studio.vercel.app"
 }
