--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/jquery": "^3.5.27",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.2",
     "escape-html": "^1.0.3",
     "preact": "^10.13.1",
