--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "escape-html": "^1.0.3",
     "preact": "^10.13.1",
+    "preact-helmet": "^4.0.0-alpha-3",
     "preact-router": "^4.1.2",
     "react-masonry-component": "^6.3.0",
     "react-query": "^3.39.3",
