--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preact": "^10.13.1",
     "preact-helmet": "^4.0.0-alpha-3",
     "preact-router": "^4.1.2",
+    "react-ga": "^3.3.1",
     "react-masonry-component": "^6.3.0",
     "react-query": "^3.39.3",
     "slate": "^0.100.0"
