--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-ga": "^3.3.1",
     "react-masonry-component": "^6.3.0",
     "react-query": "^3.39.3",
-    "slate": "^0.100.0",
-    "vite-plugin-ssr": "^0.4.142"
+    "slate": "^0.100.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
